[tool.poetry]
name = "hledger-toolbox"
version = "0.1.0"
description = "Tools to simplify the use of hledger"
authors = ["Liren Zhu <liren.zhu.cn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
jsons = "^1.6.0"
pydantic = "^1.8.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
